# MatrixedCpp

./: .gitignore  CMakeLists.txt  CMatrix.cpp  CMatrix.h  CMatrixException.cpp  CMatrixReader.cpp  CMatrixReader.h  README.md  class-diagram.drawio  defines.h
includes/: CMatrix.h  CMatrixException.h  CMatrixReader.h  defines.h  string_utils.h
src/: CCharMatrix.cpp  CCharMatrix.h  CCustomMatrix.h  CDoubleMatrix.cpp  CDoubleMatrix.h  CFloatMatrix.cpp  CFloatMatrix.h  CIntMatrix.cpp  CIntMatrix.h  CLongMatrix.cpp  CLongMatrix.h  CMatrix.cpp  CMatrix.h  CMatrixException.cpp  CMatrixException.h  CMatrixReader.cpp  CMatrixReader.h  CStringMatrix.cpp  CStringMatrix.h  defines.h  main.cpp  string_utils.cpp  string_utils.h
src/core/: CMatrixReader.cpp
src/utils/: CMatrixException.cpp  string_utils.cpp
tests/: matrix_1.txt  matrix_2.txt  matrix_3.txt
